# Tensorflow-Chatbot

./: README.md  chat.py  intents.json  main.py  model.h5  pyproject.toml  readme.md  requirements.txt  test.py  training.py
