[tool.poetry]
name = "openfabric-test"
version = "1.1"
description = "cognitive-assistant"
authors = ["Andrei"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
openfabric-pysdk = "0.1.11"
werkzeug = "2.0.3"
tensorflow = "2.10.0"
scikit-learn = "0.24.2"
pandas = "1.3.4"
numpy = ">=1.21.0"
keras = "2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
